[SCN-72] Создание компании
